# ai_gym_bro

./: .cursorrules  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: config_persistence_logging.mdc  handlers_guide.mdc  project_overview.mdc  services_guide.mdc
.devcontainer/: devcontainer.json  docker-compose.override.yml
ai_gym_bro/: __init__.py  main.py
ai_gym_bro/handlers/: common.py  start_handler.py  workflow_handler.py
ai_gym_bro/services/: openai_service.py
bot/: main.py
tests/test_handlers/: test_start_handler.py  test_workflow_handler.py
tests/test_services/: test_openai_service.py
